trunk/Archive2/04/2b6a3cc2addfd5/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:22:1: error: expected unqualified-id before ‘--’ token
 --;
 ^
